2002-03-30  David Emory Watson  <dwatson@cs.ucr.edu>

	This fixes single click activation in the list view, bug 76197.

	* src/file-manager/fm-list-view.c:
	(list_activate_callback): only do this if the double click activation
	preference is set.
	(event_after_callback): handle single click activation preference.
	(click_policy_changed): new function to handle whether file names
	are underlined or not.
	(create_and_set_up_tree_view): connect click policy preference callback
	(fm_list_view_finalize): disconnect.

2002-04-05  David Emory Watson  <dwatson@cs.ucr.edu>

	* src/nautilus-sidebar.c:
	(receive_dropped_uri_list): now g_strsplit returns an additional empty
	string when a delimiter is present at the end of the parameter string.

2002-04-05  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-metafile.c:
	(metafile_read_check_for_directory): fix bug 77520 by replacing assert
	with conditional call to metafile_read_done.

2002-04-05  Michael Meeks  <michael@ximian.com>

	* components/throbber/nautilus-throbber.c
	(nautilus_throbber_accessible_class_init),
	(nautilus_throbber_accessible_initialize), 
	(nautilus_throbber_accessible_get_type),
	(nautilus_throbber_get_accessible): impl.
	(nautilus_throbber_class_init): upd.
	(nautilus_throbber_accessible_image_get_size): 
	(nautilus_throbber_accessible_image_interface_init): 
	(nautilus_throbber_set_location): split out of
	(nautilus_throbber_button_release_event): here.
	(nautilus_icon_container_accessible_do_action): use it.
	(nautilus_throbber_accessible_get_n_actions),
	(nautilus_throbber_accessible_action_get_description),
	(nautilus_throbber_accessible_action_get_name),
	(nautilus_throbber_accessible_action_get_keybinding),
	(nautilus_throbber_accessible_action_set_description),
	(nautilus_throbber_accessible_action_interface_init): impl.

2002-04-04  Michael Meeks  <michael@ximian.com>

	* src/nautilus-window-toolbars.c
	(create_back_or_forward_toolbar_item): add tooltip